--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+VERSION 3.11
+-Adjusted the item routing "linearity" setting to the minimum. Testing shows that this has reduced the length of key chains by 2-3 steps, on average. The previous mean for the longest chain in a seed was ~16 steps, and the new mean is ~13 steps.
+-Instant death spells no longer prevent capsule monsters from tagging in.
+-Added a money making NPC to the VIP room.
+-Fixed a mistake where certain keys were not eligible for the "bonus key" slot in shrines and towers.
+-Gratze and Lighthouse are no longer assumed to require wall breaking.
+-Fixed a typo that would crash the randomizer if the thieves asked for a Catfish jewel.
+-Restored support for "Spekkio Lufia" by Artemis.
+
 VERSION 3.10
 -Added a key shop in Agurio. The rate is three dragon eggs for one key.
 -Randomized the starting tool.
