--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+
+Adds Blitz Mode to abyssonym's Lufia 2 Randomizer for a faster playthrough.
+
+
+
 Lufia 2 Terror Wave Randomizer
 Version:    3
 Date:       April 1, 2023
