Added secret code: 'sinistrals' Spoiler now shows bosses.

--- a/README
+++ b/README
@@ -39,6 +39,7 @@ Secret Codes:
     bossy                   Very random bosses (unbalanced even with scaling)
     fourkeys                Open World, but there are only four keys
     blitz                   Allows a faster playthrough
+    sinistrals              Maidens are always guarded by sinistrals. Makes Daos last boss.
 
     OPEN WORLD ENEMY SCALING
     scale                   Scale enemy status in open-world mode
