--- a/README
+++ b/README
@@ -38,8 +38,9 @@ Secret Codes:
     airship                 Start the game with the airship.
     bossy                   Very random bosses (unbalanced even with scaling)
     fourkeys                Open World, but there are only four keys
-    blitz                   Allows a faster playthrough
+    blitz                   Allows a faster open world playthrough
     sinistrals              Maidens are always guarded by sinistrals. Makes Daos last boss.
+    last_sinistral          Last boss is always one of the sinistrals. Conflicts with 'sinistrals' code.
 
     OPEN WORLD ENEMY SCALING
     scale                   Scale enemy status in open-world mode
